kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: siscom
spec:
  selector:
    app: laravel-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
